--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "dp-parent-search",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://onsdigital.github.io/dp-census-frontend-parent-search-poc",
   "dependencies": {
     "@material-ui/core": "^4.10.2",
     "@testing-library/jest-dom": "^4.2.4",
